--- a/Pages/DealsOfTheDay/dealsoftheday.html
+++ b/Pages/DealsOfTheDay/dealsoftheday.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Wishlist | Awali Stationary WLL</title>
+    <title>Deals Of The Day| Awali Stationary WLL</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
